// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Column And Row Headers 1`] = `
<table
  data-hover="true"
  data-color="accent"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
>
  <caption style="<removed>">
    Svarprosent for elevundersøkelsen nasjonalt
  </caption>
  <thead>
    <tr>
      <td>
      </td>
      <th scope="col">
        2022–23
      </th>
      <th scope="col">
        2023–24
      </th>
      <th scope="col">
        2024–25
      </th>
    </tr>
  </thead>
  <tbody style="<removed>">
    <tr>
      <th
        scope="row"
        style="<removed>"
      >
        8. trinn
      </th>
      <td>
        88,5%
      </td>
      <td>
        86,3%
      </td>
      <td>
        85,3%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="<removed>"
      >
        9. trinn
      </th>
      <td>
        88,7%
      </td>
      <td>
        86,3%
      </td>
      <td>
        84,9%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="<removed>"
      >
        10. trinn
      </th>
      <td>
        89,7%
      </td>
      <td>
        87,3%
      </td>
      <td>
        85,7%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="<removed>"
      >
        Vg1
      </th>
      <td>
        84,8%
      </td>
      <td>
        82,8%
      </td>
      <td>
        83,1%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="<removed>"
      >
        Vg2
      </th>
      <td>
        82,5%
      </td>
      <td>
        80,0%
      </td>
      <td>
        80,3%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="<removed>"
      >
        Vg3
      </th>
      <td>
        79,9%
      </td>
      <td>
        75,7%
      </td>
      <td>
        76,9%
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Expandable Rows 1`] = `
<table style="<removed>">
  <thead>
    <tr>
      <th>
        Navn
      </th>
      <th>
        Rolle
      </th>
      <th>
        Epost
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <button
          type="button"
          aria-expanded="true"
        >
          Rita Nordmann
        </button>
      </td>
      <td>
        Rektor
      </td>
      <td>
        rita@nordmann.no
      </td>
    </tr>
    <tr>
      <td colspan="3">
        Rita har vært rektor i 12 år og har ansvar for 45 ansatte. Hun leder skolens pedagogiske utviklingsarbeid.
      </td>
    </tr>
    <tr>
      <td>
        <button
          type="button"
          aria-expanded="false"
        >
          Kari Nordmann
        </button>
      </td>
      <td>
        Lektor
      </td>
      <td>
        kari@nordmann.no
      </td>
    </tr>
    <tr hidden>
      <td colspan="3">
        Kari underviser i norsk og samfunnsfag for 8.–10. trinn. Hun er også kontaktlærer for 9A.
      </td>
    </tr>
    <tr>
      <td>
        <button
          type="button"
          aria-expanded="false"
        >
          Ola Nordmann
        </button>
      </td>
      <td>
        Lektor
      </td>
      <td>
        ola@nordmann.no
      </td>
    </tr>
    <tr hidden>
      <td colspan="3">
        Ola underviser i matematikk og naturfag. Han er ansvarlig for skolens realfagssatsing.
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Fixed Table 1`] = `
<div>
  <table
    id="<removed>"
    style="<removed>"
  >
    <caption>
      Tildeling skolebibliotek 2024
    </caption>
    <thead>
      <tr>
        <th>
          Kommune
        </th>
        <th>
          Tildeling (kr)
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Bjerkreim kommune
        </td>
        <td style="<removed>">
          330 000
        </td>
      </tr>
      <tr>
        <td>
          Færder kommune
        </td>
        <td style="<removed>">
          750 000
        </td>
      </tr>
      <tr>
        <td>
          Gjøvik kommune
        </td>
        <td style="<removed>">
          150 000
        </td>
      </tr>
      <tr>
        <td>
          Hurdal kommune
        </td>
        <td style="<removed>">
          550 000
        </td>
      </tr>
      <tr>
        <td>
          Marker kommune
        </td>
        <td style="<removed>">
          900 000
        </td>
      </tr>
    </tbody>
  </table>
  <ds-pagination
    aria-label="Bla i sider"
    role="navigation"
  >
    <ul>
      <li>
        <button
          data-variant="tertiary"
          type="button"
          aria-label="Forrige side"
          aria-hidden="true"
        >
          Forrige
        </button>
      </li>
      <li>
        <button
          data-variant="tertiary"
          type="button"
          aria-label="Side 1"
          aria-current="true"
        >
          1
        </button>
      </li>
      <li>
        <button
          data-variant="tertiary"
          type="button"
          aria-label="Side 2"
        >
          2
        </button>
      </li>
      <li>
        <button
          data-variant="tertiary"
          type="button"
          aria-label="Side 3"
        >
          3
        </button>
      </li>
      <li>
        <button
          data-variant="tertiary"
          type="button"
          aria-label="Neste side"
          aria-hidden="false"
        >
          Neste
        </button>
      </li>
    </ul>
  </ds-pagination>
</div>
`;

exports[`Multiple Header Rows 1`] = `
<table
  data-zebra="true"
  data-color="support1"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
>
  <thead>
    <tr>
      <td>
      </td>
      <th
        colspan="5"
        style="<removed>"
      >
        Trives du på skolen?
      </th>
    </tr>
    <tr>
      <td>
      </td>
      <th>
        Trives ikke i det hele tatt
      </th>
      <th>
        Trives ikke noe særlig
      </th>
      <th>
        Trives litt
      </th>
      <th>
        Trives godt
      </th>
      <th>
        Trives svært godt
      </th>
    </tr>
  </thead>
  <tbody style="<removed>">
    <tr>
      <th
        scope="row"
        style="<removed>"
      >
        Idrettsfag
      </th>
      <td>
        0,5%
      </td>
      <td>
        1,0%
      </td>
      <td>
        5,7%
      </td>
      <td>
        46,0%
      </td>
      <td>
        46,9%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="<removed>"
      >
        Medier og kommunikasjon
      </th>
      <td>
        1,2%
      </td>
      <td>
        1,9%
      </td>
      <td>
        11,3%
      </td>
      <td>
        49,4%
      </td>
      <td>
        36,1%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="<removed>"
      >
        Musikk, dans og drama
      </th>
      <td>
        -
      </td>
      <td>
        -
      </td>
      <td>
        7,0%
      </td>
      <td>
        41,9%
      </td>
      <td>
        49,8%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="<removed>"
      >
        Studiespesialisering
      </th>
      <td>
        1,2%
      </td>
      <td>
        1,8%
      </td>
      <td>
        8,9%
      </td>
      <td>
        49,8%
      </td>
      <td>
        38,3%
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Preview 1`] = `
<table data-color="neutral">
  <caption>
    Sensur FSP6236 Tegnspråk III
  </caption>
  <thead>
    <tr>
      <th>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-label="Velg alle ansatte"
            id="<removed>"
            type="checkbox"
            value
            name="my-checkbox"
          >
        </ds-field>
      </th>
      <th aria-sort="none">
        <button type="button">
          Navn
        </button>
      </th>
      <th>
        E-post
      </th>
      <th>
        Status
      </th>
      <th>
        Besvarelser
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="1"
            name="my-checkbox"
          >
        </ds-field>
      </td>
      <td>
        Rita Nordmann
      </td>
      <td>
        rita@nordmann.no
      </td>
      <td>
        <span
          data-variant="default"
          data-color="info"
        >
          I arbeid
        </span>
      </td>
      <td style="<removed>">
        19
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="2"
            name="my-checkbox"
          >
        </ds-field>
      </td>
      <td>
        Kari Nordmann
      </td>
      <td>
        kari@nordmann.no
      </td>
      <td>
        <span
          data-variant="default"
          data-color="success"
        >
          Ferdig
        </span>
      </td>
      <td style="<removed>">
        0
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="3"
            name="my-checkbox"
          >
        </ds-field>
      </td>
      <td>
        Ola Nordmann
      </td>
      <td>
        ola@nordmann.no
      </td>
      <td>
        <span
          data-variant="default"
          data-color="info"
        >
          I arbeid
        </span>
      </td>
      <td style="<removed>">
        14
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="4"
            name="my-checkbox"
          >
        </ds-field>
      </td>
      <td>
        Kai Nordmann
      </td>
      <td>
        kai@nordmann.no
      </td>
      <td>
        <span
          data-variant="default"
          data-color="warning"
        >
          Ikke begynt
        </span>
      </td>
      <td style="<removed>">
        35
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="5"
            name="my-checkbox"
          >
        </ds-field>
      </td>
      <td>
        Mateo Nordmann
      </td>
      <td>
        mateo@nordmann.no
      </td>
      <td>
        <span
          data-variant="default"
          data-color="success"
        >
          Ferdig
        </span>
      </td>
      <td style="<removed>">
        0
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td colspan="4">
        Totalt gjenstår
      </td>
      <td style="<removed>">
        68
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`Sortable 1`] = `
<table>
  <thead>
    <tr>
      <th aria-sort="none">
        <button type="button">
          Navn
        </button>
      </th>
      <th>
        Epost
      </th>
      <th aria-sort="none">
        <button type="button">
          Telefon
        </button>
      </th>
      <th aria-sort="none">
        <button type="button">
          Rolle
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Rita Nordmann
      </td>
      <td>
        rita@nordmann.no
      </td>
      <td>
        22345678
      </td>
      <td>
        Rektor
      </td>
    </tr>
    <tr>
      <td>
        Kari Nordmann
      </td>
      <td>
        kari@nordmann.no
      </td>
      <td>
        87654321
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Ola Nordmann
      </td>
      <td>
        ola@nordmann.no
      </td>
      <td>
        32345678
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Kai Nordmann
      </td>
      <td>
        kai@nordmann.no
      </td>
      <td>
        62353278
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Mateo Nordmann
      </td>
      <td>
        mateo@nordmann.no
      </td>
      <td>
        12345678
      </td>
      <td>
        Ass. rektor
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Sticky Header 1`] = `
<h2 style="<removed>">
  Ansattes utdanning fordelt på eiertype (ordinære), 2021
</h2>
<div style="<removed>">
  <table
    data-sticky-header="true"
    data-zebra="true"
    tabindex="0"
    data-color="support1"
    data-tinted-column-header="true"
    data-tinted-row-header="true"
  >
    <caption>
      Ansattes utdanning fordelt på eiertype (ordinære), 2021
    </caption>
    <thead>
      <tr>
        <td>
        </td>
        <th>
          5 store
        </th>
        <th>
          Andre kjeder
        </th>
        <th>
          Frittstående
        </th>
        <th>
          Kommune
        </th>
        <th>
          Totalt
        </th>
      </tr>
    </thead>
    <tbody style="<removed>">
      <tr>
        <th
          scope="row"
          style="<removed>"
        >
          Barnehagelærer
        </th>
        <td>
          42,9%
        </td>
        <td>
          42,9%
        </td>
        <td>
          43,8%
        </td>
        <td>
          43,9%
        </td>
        <td>
          43,6%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="<removed>"
        >
          Annen pedagogisk utdanning
        </th>
        <td>
          1,9%
        </td>
        <td>
          2,8%
        </td>
        <td>
          2,0%
        </td>
        <td>
          1,3%
        </td>
        <td>
          1,7%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="<removed>"
        >
          Annen høyere utdanning
        </th>
        <td>
          2,2%
        </td>
        <td>
          2,7%
        </td>
        <td>
          2,2%
        </td>
        <td>
          1,2%
        </td>
        <td>
          1,8%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="<removed>"
        >
          Barne- og ungdomsarbeider
        </th>
        <td>
          15,0%
        </td>
        <td>
          16,4%
        </td>
        <td>
          18,4%
        </td>
        <td>
          27,7%
        </td>
        <td>
          22,3%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="<removed>"
        >
          Annet fagarbeider
        </th>
        <td>
          5,2%
        </td>
        <td>
          4,6%
        </td>
        <td>
          5,3%
        </td>
        <td>
          5,3%
        </td>
        <td>
          5,2%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="<removed>"
        >
          Annen bakgrunn
        </th>
        <td>
          32,8%
        </td>
        <td>
          30,5%
        </td>
        <td>
          28,3%
        </td>
        <td>
          20,6%
        </td>
        <td>
          25,5%
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Tree Structured Table 1`] = `
<table
  data-zebra="true"
  data-color="support1"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
  style="<removed>"
>
  <caption style="<removed>">
    Nasjonale prøver 5. trinn – skoleåret 2024–25, snitt skalapoeng
  </caption>
  <thead>
    <tr>
      <th scope="col">
        Område
      </th>
      <th
        scope="col"
        style="<removed>"
      >
        Lesing
      </th>
      <th
        scope="col"
        style="<removed>"
      >
        Regning
      </th>
      <th
        scope="col"
        style="<removed>"
      >
        Engelsk
      </th>
    </tr>
  </thead>
  <tbody>
    <tr data-level="1">
      <th scope="row">
        <button
          type="button"
          aria-expanded="true"
        >
          Nasjonalt
        </button>
      </th>
      <td style="<removed>">
        50
      </td>
      <td style="<removed>">
        50
      </td>
      <td style="<removed>">
        50
      </td>
    </tr>
    <tr data-level="2">
      <th scope="row">
        <button
          type="button"
          aria-expanded="false"
        >
          Akershus
        </button>
      </th>
      <td style="<removed>">
        52
      </td>
      <td style="<removed>">
        52
      </td>
      <td style="<removed>">
        53
      </td>
    </tr>
    <tr data-level="2">
      <th scope="row">
        <button
          type="button"
          aria-expanded="true"
        >
          Oslo
        </button>
      </th>
      <td style="<removed>">
        53
      </td>
      <td style="<removed>">
        52
      </td>
      <td style="<removed>">
        54
      </td>
    </tr>
    <tr data-level="3">
      <th scope="row">
        <button
          type="button"
          aria-expanded="false"
        >
          Frogner
        </button>
      </th>
      <td style="<removed>">
        55
      </td>
      <td style="<removed>">
        53
      </td>
      <td style="<removed>">
        56
      </td>
    </tr>
    <tr data-level="3">
      <th scope="row">
        <button
          type="button"
          aria-expanded="false"
        >
          Gamle Oslo
        </button>
      </th>
      <td style="<removed>">
        52
      </td>
      <td style="<removed>">
        50
      </td>
      <td style="<removed>">
        52
      </td>
    </tr>
    <tr data-level="3">
      <th scope="row">
        <button
          type="button"
          aria-expanded="false"
        >
          Grünerløkka
        </button>
      </th>
      <td style="<removed>">
        54
      </td>
      <td style="<removed>">
        52
      </td>
      <td style="<removed>">
        55
      </td>
    </tr>
    <tr data-level="3">
      <th scope="row">
        <button
          type="button"
          aria-expanded="false"
        >
          Nordre Aker
        </button>
      </th>
      <td style="<removed>">
        53
      </td>
      <td style="<removed>">
        52
      </td>
      <td style="<removed>">
        54
      </td>
    </tr>
    <tr data-level="3">
      <th scope="row">
        <button
          type="button"
          aria-expanded="false"
        >
          St. Hanshaugen
        </button>
      </th>
      <td style="<removed>">
        54
      </td>
      <td style="<removed>">
        53
      </td>
      <td style="<removed>">
        55
      </td>
    </tr>
    <tr data-level="3">
      <th scope="row">
        <button
          type="button"
          aria-expanded="false"
        >
          Søndre Nordstrand
        </button>
      </th>
      <td style="<removed>">
        50
      </td>
      <td style="<removed>">
        48
      </td>
      <td style="<removed>">
        50
      </td>
    </tr>
    <tr data-level="2">
      <th scope="row">
        <button
          type="button"
          aria-expanded="false"
        >
          Rogaland
        </button>
      </th>
      <td style="<removed>">
        50
      </td>
      <td style="<removed>">
        51
      </td>
      <td style="<removed>">
        51
      </td>
    </tr>
    <tr data-level="2">
      <th scope="row">
        <button
          type="button"
          aria-expanded="false"
        >
          Trøndelag
        </button>
      </th>
      <td style="<removed>">
        50
      </td>
      <td style="<removed>">
        51
      </td>
      <td style="<removed>">
        50
      </td>
    </tr>
    <tr data-level="2">
      <th scope="row">
        <button
          type="button"
          aria-expanded="false"
        >
          Vestland
        </button>
      </th>
      <td style="<removed>">
        51
      </td>
      <td style="<removed>">
        51
      </td>
      <td style="<removed>">
        50
      </td>
    </tr>
    <tr data-level="2">
      <th scope="row">
        …
      </th>
      <td style="<removed>">
        …
      </td>
      <td style="<removed>">
        …
      </td>
      <td style="<removed>">
        …
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`With Border 1`] = `
<div style="<removed>">
  <table
    data-border="true"
    data-color="support2"
    data-tinted-column-header="true"
    data-tinted-row-header="true"
  >
    <thead>
      <tr>
        <th>
          Navn
        </th>
        <th>
          Rolle
        </th>
        <th>
          Epost
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Rita Nordmann
        </td>
        <td>
          Rektor
        </td>
        <td>
          rita@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Kari Nordmann
        </td>
        <td>
          Lektor
        </td>
        <td>
          kari@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Ola Nordmann
        </td>
        <td>
          Lektor
        </td>
        <td>
          ola@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Kai Nordmann
        </td>
        <td>
          Lektor
        </td>
        <td>
          kai@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Mateo Nordmann
        </td>
        <td>
          Ass. rektor
        </td>
        <td>
          mateo@nordmann.no
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`With Form Elements 1`] = `
<table>
  <thead>
    <tr>
      <th>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-label="Select all"
            id="<removed>"
            type="checkbox"
            value
            name="components-table--with-form-elements-checkboxGroup"
          >
        </ds-field>
      </th>
      <th>
        nr.
      </th>
      <th>
        Spørsmål
      </th>
      <th>
        Alternativ 1
      </th>
      <th>
        Alternativ 2
      </th>
    </tr>
  </thead>
  <tbody style="<removed>">
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-label="Check 1"
            id="<removed>"
            type="checkbox"
            value="1"
            name="components-table--with-form-elements-checkboxGroup"
          >
        </ds-field>
      </td>
      <td>
        1.
      </td>
      <td style="<removed>">
        <ds-field data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-1"
              type="text"
              value="Trives du på skolen?"
            >
          </div>
        </ds-field>
      </td>
      <td style="<removed>">
        <ds-field data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-2"
              type="text"
              value="Trives ikke noe særlig"
            >
          </div>
        </ds-field>
      </td>
      <td style="<removed>">
        <ds-field data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-3"
              type="text"
              value="Trives godt"
            >
          </div>
        </ds-field>
      </td>
    </tr>
    <tr>
      <td>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            aria-label="Check 1"
            id="<removed>"
            type="checkbox"
            value="2"
            checked
            name="components-table--with-form-elements-checkboxGroup"
          >
        </ds-field>
      </td>
      <td>
        2.
      </td>
      <td>
        <ds-field
          data-size="sm"
          style="<removed>"
        >
          <div>
            <input
              aria-label="Textfield 1-1"
              type="text"
              value="Har du opplevd mobbing?"
            >
          </div>
        </ds-field>
      </td>
      <td>
        <ds-field data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-2"
              type="text"
              value="Sjelden"
            >
          </div>
        </ds-field>
      </td>
      <td>
        <ds-field data-size="sm">
          <div>
            <input
              cols="3"
              aria-label="Textfield 1-3"
              type="text"
              value="Ofte"
            >
          </div>
        </ds-field>
      </td>
    </tr>
  </tbody>
</table>
`;
